src/test/deca/syntax/invalid/instruction_invalide.deca
// Description:
//    instruction_invalide
//
// Resultats:
//    ok
//
// Historique:
//    cree le 11/01/2023


{
	,
}
